--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="./css/layout.css">
     <link rel="stylesheet" type="text/css" href="./css/colors.css">
     <link rel="stylesheet" type="text/css" href="./css/general.css">
+    <link rel="stylesheet" type="text/css" href="./css/forums.css">
     <link rel="stylesheet" type="text/css" href="./css/threads.css">
     
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
