--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 
 
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>SD</title>
+    <title>Decent Forums</title>
   </head>
   <body>
     <noscript>
