update README & vue-router, strip % from forum names ;(

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
 
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Decent Forums</title>
+    <title>Decent-a-Forums</title>
   </head>
   <body>
     <noscript>
