--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" type="text/css" href="./css/forums.css">
     <link rel="stylesheet" type="text/css" href="./css/threads.css">
 
+    <link rel="stylesheet" type="text/css" href="./css/blocks.css">
+
     <link rel="stylesheet" type="text/css" href="./css/v-tooltip.css">
 
 
